# obas-sus

./: .gitignore  docker-compose.yml  pyproject.toml
input/: ontology-for-bariatric-surgery.obda  ontology-for-bariatric-surgery.owl  ontology-for-bariatric-surgery.properties  ontology-for-bariatric-surgery.q
scripts/: get_data.py
